[project]
name = "FailsafeBot"
version = "v1.1.19"
description = "Telegram and Discord chat bot"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.16",
    "discord-py>=2.4.0",
    "elevenlabs>=2.4.0",
    "filetype>=1.2.0",
    "ffmpeg-python>=0.2.0",
    "httpx==0.27.2",
    "loguru>=0.7.3",
    "multidict>=6.6.3",
    "numpy>=2.1.1",
    "openai>=1.88.0",
    "psutil>=6.0.0",
    "pynacl>=1.5.0",
    "python-telegram-bot==22.1",
    "requests>=2.32.3",
    "strsimpy>=0.2.1",
    "unidecode>=1.3.8",
    "yt-dlp>=2025.3.31",
    "tomli-w>=1.2.0",
]

[tool.uv]
link-mode = "copy"
